fix generation frequency of shrubs

--- a/server/src/main/resources/generator/biome/minecraft/desert.yml
+++ b/server/src/main/resources/generator/biome/minecraft/desert.yml
@@ -19,12 +19,14 @@ populators:
     # Dead bushes
   - id: "nukkitx:shrub"
     chance: 0.0078125 # about 2 per chunk
+    patchSize: 4
     on: "sand"
     block: "deadbush"
 
     # Cactus
   - id: "nukkitx:plant"
     chance: 0.0390625 # about 10 per chunk
+    patchSize: 10
     height: "1-3"
     on: "sand"
     block: "cactus"
@@ -32,6 +34,7 @@ populators:
     # Sugar cane
   - id: "nukkitx:plant"
     chance: 0.01953125 # about 5 per chunk
+    patchSize: 20
     height: "1-3"
     on: "sand"
     water: "water"
