--- a/server/src/main/resources/generator/biome/minecraft/forest.yml
+++ b/server/src/main/resources/generator/biome/minecraft/forest.yml
@@ -13,18 +13,12 @@ decorators:
     top: "grass"
     fill: "dirt"
 
-    # Tall grass
-  - id: "nukkitx:scattered_cover"
-    chance: 0.05
-    on: "grass"
-    block: "tallgrass"
-
 populators:
     # Fallen trees
   - id: "nukkitx:tree"
     chance: 0.0005580357 # about 1 per 7 chunks
     on: "grass"
-    replace: "air,tallgrass"
+    replace: "air"
     types:
       - species: "oak"
         fallen: true
@@ -41,13 +35,19 @@ populators:
   - id: "nukkitx:tree"
     chance: 0.0390625 # about 10 per chunk
     on: "grass"
-    replace: "air,tallgrass"
+    replace: "air"
     types:
       - "oak"
       - "oak"
       - "oak"
       - "oak"
       - "birch"
+
+    # Tall grass
+  - id: "nukkitx:shrub"
+    chance: 0.0078125 # about 2 per chunk
+    on: "grass"
+    block: "tallgrass"
 
     # Flowers
   - id: "nukkitx:shrub"
