--- a/server/src/main/resources/generator/biome/minecraft/roofed_forest.yml
+++ b/server/src/main/resources/generator/biome/minecraft/roofed_forest.yml
@@ -13,21 +13,21 @@ decorators:
     top: "grass"
     fill: "dirt"
 
-    # Tall grass
-  - id: "nukkitx:scattered_cover"
-    chance: 0.05
-    on: "grass"
-    block: "tallgrass"
-
 populators:
     # Mushrooms
   - id: "nukkitx:tree"
     chance: 0.001953125 # about 1 per 2 chunks
     on: "grass"
-    replace: "air,tallgrass"
+    replace: "air"
     types:
       - "mushroom_red"
       - "mushroom_brown"
+
+    # Tall grass
+  - id: "nukkitx:shrub"
+    chance: 0.0078125 # about 2 per chunk
+    on: "grass"
+    block: "tallgrass"
 
     # Huge trees
   - id: "nukkitx:huge_tree"
