--- a/server/src/main/resources/generator/biome/minecraft/beach.yml
+++ b/server/src/main/resources/generator/biome/minecraft/beach.yml
@@ -22,6 +22,7 @@ populators:
     # Sugar cane
   - id: "nukkitx:plant"
     chance: 0.0390625 # about 10 per chunk
+    patchSize: 20
     height: "1-3"
     block: "reeds"
     on: "sand"
