--- a/server/src/main/resources/generator/biome/minecraft/mesa.yml
+++ b/server/src/main/resources/generator/biome/minecraft/mesa.yml
@@ -53,6 +53,7 @@ populators:
     # Dead bushes
   - id: "nukkitx:shrub"
     chance: 0.078125 # about 20 per chunk
+    patchSize: 4
     on:
       - "sand#1"
       - "hardened_clay"
@@ -67,6 +68,7 @@ populators:
     # Cactus
   - id: "nukkitx:plant"
     chance: 0.01953125 # about 5 per chunk
+    patchSize: 10
     height: "1-3"
     on: "sand#1"
     block: "cactus"
@@ -74,7 +76,16 @@ populators:
     # Sugar cane
   - id: "nukkitx:plant"
     chance: 0.01171875 # about 3 per chunk
+    patchSize: 20
     height: "1-3"
     on: "sand,sand#1"
     water: "water"
     block: "reeds"
+
+    # Gold
+  - id: "nukkitx:ore"
+    chance: 0.078125 # about 20 per chunk
+    size: 9
+    height: "32-80"
+    block: "gold_ore"
+    replace: "stone"
