--- a/server/src/main/resources/generator/biome/minecraft/swampland.yml
+++ b/server/src/main/resources/generator/biome/minecraft/swampland.yml
@@ -31,18 +31,12 @@ decorators:
     top: "grass"
     fill: "dirt"
 
-    # Tall grass
-  - id: "nukkitx:scattered_cover"
-    chance: 0.05
-    on: "grass"
-    block: "tallgrass"
-
 populators:
     # Fallen trees
   - id: "nukkitx:tree"
     chance: 0.0005580357 # about 1 per 7 chunks
     on: "grass"
-    replace: "air,tallgrass"
+    replace: "air"
     type:
       species: "oak"
       fallen: true
@@ -66,19 +60,27 @@ populators:
     # Sugar cane
   - id: "nukkitx:plant"
     chance: 0.0390625 # about 10 per chunk
+    patchSize: 20
     height: "1-3"
     block: "reeds"
     on: "grass"
     water: "water"
 
-    # Mushrooms
+    # Mushrooms & blue orchids
   - id: "nukkitx:shrub"
-    chance: 0.01171875 # about 3 per chunk
+    chance: 0.015625 # about 4 per chunk
     on: "grass"
-    block: "2*brown_mushroom,red_mushroom"
+    block: "2*brown_mushroom,red_mushroom,red_flower#1"
 
-    # Blue orchids
+    # Dead bushes
   - id: "nukkitx:shrub"
     chance: 0.00390625 # about 1 per chunk
+    patchSize: 4
+    on: "sand"
+    block: "deadbush"
+
+    # Tall grass
+  - id: "nukkitx:shrub"
+    chance: 0.01953125 # about 5 per chunk
     on: "grass"
-    block: "red_flower#1"
+    block: "tallgrass"
