--- a/server/src/main/resources/generator/biome/minecraft/taiga.yml
+++ b/server/src/main/resources/generator/biome/minecraft/taiga.yml
@@ -29,16 +29,16 @@ populators:
     replace: "air"
     type: "spruce"
 
-    # Berry bushes
+    # Berry bushes & mushrooms
+  - id: "nukkitx:shrub"
+    chance: 0.0078125 # about 2 per chunk
+    on: "grass,podzol,dirt#1"
+    block: "sweet_berry_bush,2*brown_mushroom,red_mushroom"
+
+    # Tall grass & ferns
   - id: "nukkitx:shrub"
     chance: 0.00390625 # about 1 per chunk
-    on: "grass"
-    block: "sweet_berry_bush"
-
-    # Tall grass
-  - id: "nukkitx:scattered_cover"
-    chance: 0.05
-    on: "grass"
+    on: "grass,podzol,dirt#1"
     block:
       - "tallgrass"
       - "tallgrass"
