partially fix empty chunks

--- a/server/src/main/resources/generator/biome/minecraft/flower_forest.yml
+++ b/server/src/main/resources/generator/biome/minecraft/flower_forest.yml
@@ -24,6 +24,7 @@ populators:
     chance: 0.390625 # about 100 per chunk
     on: "grass"
     replace: "air"
+    roundDown: false
     block:
       - "yellow_flower"
       - "red_flower"
