--- a/server/src/main/resources/generator/biome/minecraft/forest.yml
+++ b/server/src/main/resources/generator/biome/minecraft/forest.yml
@@ -54,6 +54,7 @@ populators:
     chance: 0.015625 # about 4 per chunk
     on: "grass"
     replace: "air,tallgrass"
+    roundDown: false
     block: "2*yellow_flower,red_flower"
 
     # Double plants
