--- a/server/src/main/resources/generator/biome/minecraft/savanna.yml
+++ b/server/src/main/resources/generator/biome/minecraft/savanna.yml
@@ -32,6 +32,7 @@ populators:
     chance: 0.015625 # about 4 per chunk
     on: "grass"
     replace: "air"
+    roundDown: false
     block: "2*yellow_flower,red_flower"
 
     # Tall grass
