--- a/server/src/main/resources/generator/biome/minecraft/birch_forest.yml
+++ b/server/src/main/resources/generator/biome/minecraft/birch_forest.yml
@@ -9,7 +9,7 @@ populators:
   - id: "nukkitx:tree"
     chance: 0.0005580357 # about 1 per 7 chunks
     on: "grass"
-    replace: "air,tallgrass"
+    replace: "air"
     type:
       species: "birch"
       fallen: true
@@ -24,7 +24,7 @@ populators:
   - id: "nukkitx:shrub"
     chance: 0.015625 # about 4 per chunk
     on: "grass"
-    replace: "air,tallgrass"
+    replace: "air"
     roundDown: false
     block: "2*yellow_flower,red_flower"
 
@@ -32,8 +32,14 @@ populators:
   - id: "nukkitx:double_plant"
     chance: 0.01171875 # about 3 per chunk
     on: "grass"
-    replace: "air,tallgrass"
+    replace: "air"
     types:
       - 1 # lilac
       - 4 # rose
       - 5 # peony
+
+    # Tall grass
+  - id: "nukkitx:shrub"
+    chance: 0.0078125 # about 2 per chunk
+    on: "grass"
+    block: "tallgrass"
