--- a/server/src/main/resources/generator/biome/minecraft/stone_beach.yml
+++ b/server/src/main/resources/generator/biome/minecraft/stone_beach.yml
@@ -4,6 +4,6 @@ elevationVanilla:
   height: 0.1
   variation: 0.8
 
-decorators: []
+decorators:
 
 # this is basically the easiest biome in the game lol
