stop randomly switching between the seed in config and the seed in level.dat
seriously, level loading is totally broken

--- a/server/src/main/resources/generator/biomemap/minecraft/overworld.yml
+++ b/server/src/main/resources/generator/biomemap/minecraft/overworld.yml
@@ -3,6 +3,7 @@
 # Author: DaPorkchop_
 
 id: "nukkitx:complex"
+seed: "overworld"
 fallback: "ocean"
 root:
   # Finally, scale everything up by a factor of 4 using the smoother voronoi algorithm.
