--- a/server/src/main/resources/generator/biome/minecraft/jungle.yml
+++ b/server/src/main/resources/generator/biome/minecraft/jungle.yml
@@ -30,6 +30,7 @@ populators:
   - id: "nukkitx:cocoa"
     chance: 0.2 # about one per 5 logs
     avoidDouble: true
+    height: "60-75"
     on: "log#3"
 
     # Melons
@@ -47,11 +48,6 @@ populators:
     replace: "air,leaves#3"
     below: "grass"
     type: "jungle"
-
-    # Vines on logs
-  - id: "nukkitx:vines"
-    chance: 0.75
-    on: "log#3"
 
     # Bushes
   - id: "nukkitx:bush"
