--- a/server/src/main/resources/generator/biome/minecraft/extreme_hills_mutated.yml
+++ b/server/src/main/resources/generator/biome/minecraft/extreme_hills_mutated.yml
@@ -12,8 +12,8 @@ decorators:
     in:
       - id: "nukkitx:surface"
         top: "grass"
-        fill: "dirt"
+        filler: "dirt"
     out:
       - id: "nukkitx:surface"
         top: "gravel"
-        fill: "gravel"
+        filler: "gravel"
