--- a/server/src/main/resources/generator/biome/minecraft/extreme_hills_plus_trees.yml
+++ b/server/src/main/resources/generator/biome/minecraft/extreme_hills_plus_trees.yml
@@ -3,7 +3,7 @@ parent: "minecraft:extreme_hills"
 decorators:
   - id: "nukkitx:surface"
     top: "grass"
-    fill: "dirt"
+    filler: "dirt"
 
 populators:
   - id: "nukkitx:next"
