--- a/server/src/main/resources/generator/biome/minecraft/ice_plains_spikes.yml
+++ b/server/src/main/resources/generator/biome/minecraft/ice_plains_spikes.yml
@@ -7,7 +7,7 @@ elevationVanilla:
 decorators:
   - id: "nukkitx:surface"
     top: "snow"
-    fill: "dirt"
+    filler: "dirt"
 
 populators:
     # Ice spikes
