--- a/server/src/main/resources/generator/biome/minecraft/mesa_plateau_stone.yml
+++ b/server/src/main/resources/generator/biome/minecraft/mesa_plateau_stone.yml
@@ -23,4 +23,4 @@ decorators:
           - "stained_hardened_clay#8" # light gray
           - "stained_hardened_clay#12" # brown
           - "stained_hardened_clay#14" # red
-        with: "hardened_clay"
+        block: "hardened_clay"
