--- a/server/src/main/resources/generator/biome/minecraft/cold_beach.yml
+++ b/server/src/main/resources/generator/biome/minecraft/cold_beach.yml
@@ -7,6 +7,6 @@ elevationVanilla:
 decorators:
   - id: "nukkitx:surface_deep"
     top: "sand"
-    fill: "sand"
+    filler: "sand"
     deep: "sandstone"
     deepSize: "1-4"
