BlockStateMetaMappings no longer crashes while parsing data

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/main/resources/locale/vanilla"]
 	path = src/main/resources/locale/vanilla
 	url = https://github.com/NukkitX/Language/
+[submodule "src/main/resources/data"]
+	path = src/main/resources/data
+	url = https://github.com/CloudburstMC/Data.git
