--- a/src/main/resources/generator/biome/minecraft/jungle.yml
+++ b/src/main/resources/generator/biome/minecraft/jungle.yml
@@ -31,7 +31,7 @@ populators:
     chance: 0.2 # about one per 5 logs
     avoidDouble: true
     height: "60-75"
-    on: "log#3"
+    on: "log{tree_species=jungle}"
 
     # Melons
   - id: "nukkitx:shrub"
@@ -45,7 +45,7 @@ populators:
   - id: "nukkitx:huge_tree"
     chance: 0.02197265625 # about 5.625 per chunk
     on: "grass"
-    replace: "air,leaves#3"
+    replace: "air,leaves{tree_species=jungle}"
     below: "grass"
     type: "jungle"
 
@@ -54,8 +54,8 @@ populators:
     chance: 0.0390625 # about 10 per chunk
     on: "grass"
     replace: "air"
-    log: "log#3"
-    leaves: "leaves#3"
+    log: "log{tree_species=jungle}"
+    leaves: "leaves{tree_species=jungle}"
 
     # Flowers
   - id: "nukkitx:shrub"
@@ -69,8 +69,4 @@ populators:
   - id: "nukkitx:shrub"
     chance: 0.09765625 # about 25 per chunk
     on: "grass"
-    block:
-      - "tallgrass"
-      - "tallgrass"
-      - "tallgrass"
-      - "tallgrass#2" # fern
+    block: "3*tallgrass,tallgrass{tall_grass_type=fern}"
